[package]
name = "tcpsoup"
version = "0.0.1"
authors = ["Brandon Ros"]
edition = "2018"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }

[[bin]]
name = "diag-tunnel"
path = "src/diag-tunnel.rs"

[[bin]]
name = "vehicle-tunnel"
path = "src/vehicle-tunnel.rs"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
