[package]
name = "tcpsoup"
version = "0.0.1"
authors = ["Brandon Ros"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-rc.1"
#futures = "0.3"
hyper = { version = "0.14.7", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
tokio = { version = "1.17.0", features = ["full"] }

[[bin]]
name = "diag-client"
path = "src/diag-client.rs"

[[bin]]
name = "diag-tunnel"
path = "src/diag-tunnel.rs"

[[bin]]
name = "vehicle-server"
path = "src/vehicle-server.rs"

[[bin]]
name = "vehicle-tunnel"
path = "src/vehicle-tunnel.rs"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
