[package]
name = "tcpsoup"
version = "0.0.1"
authors = ["Brandon Ros"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-rc.1"
hyper = { version = "0.14.7", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
tokio = { version = "1.17.0", features = ["full"] }

[[bin]]
name = "diag-client"
path = "src/diag-client.rs"

[[bin]]
name = "diag-tunnel-server"
path = "src/diag-tunnel-server.rs"

[[bin]]
name = "vehicle-server"
path = "src/vehicle-server.rs"

[[bin]]
name = "vehicle-tunnel-client"
path = "src/vehicle-tunnel-client.rs"
